# jee-agent

./: .env.example  .gitignore  CHECKLIST.md  GEMINI.md  IMPROVEMENTS.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: __init__.py  daily_planner.py  lecture_optimizer.py  memory_curator.py  pyq_curator.py  stress_monitor.py  theory_coach.py
app/config/: settings.py
app/knowledge/: __init__.py  pyq_loader.py
app/storage/: __init__.py  student_state.py
app/teams/: __init__.py  jee_prep_team.py
app/workflows/: __init__.py  study_session.py
data/: jee_student.db
data/vector_store/jee_pyqs.lance/_transactions/: 0-daca003c-f993-4784-946b-feeea9da11d2.txn
data/vector_store/jee_pyqs.lance/_versions/: 1.manifest
jee_agent/: cli.py  main.py  os.py
jee_agent/agents/: __init__.py  daily_planner.py  lecture_optimizer.py  memory_curator.py  pyq_curator.py  stress_monitor.py  theory_coach.py
jee_agent/config/: settings.py
jee_agent/knowledge/: __init__.py  pyq_loader.py
jee_agent/storage/: __init__.py  database.py  db.py  postgres_storage.py  student_state.py
jee_agent/teams/: __init__.py  jee_prep_team.py
jee_agent/workflows/: __init__.py  study_session.py
