[project]
name = "jee-agent"
version = "0.2.0"
description = "Adaptive JEE Main preparation system powered by Agno multi-agent framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "mistralai>=1.0.0",
    "groq>=0.4.0",
    "litellm>=1.0.0",
    "youtube-transcript-api>=1.2.3",
    "fastapi>=0.128.0",
    "tantivy>=0.25.1",
    "pgvector>=0.4.2",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
jee-prep = "jee_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jee_agent"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py313"
